# discordia

./: Cargo.toml
crates/eris-accounting/: Cargo.toml
crates/eris-accounting/src/: datetime.rs  import.rs  lib.rs  member_fees.rs  transactions.rs
crates/eris-banking/: Cargo.toml
crates/eris-banking/src/: bank_transaction.rs  lib.rs
crates/eris-banking/src/deuba/: bank_transactions.rs  csv_parser.rs  language.rs  mod.rs
crates/eris-banking/test/: konto_de.csv  konto_en.csv
crates/eris-cli/: Cargo.toml
crates/eris-cli/src/: cli.rs  formatting.rs  lib.rs  main.rs
crates/eris-cli/src/commands/: accounting.rs  bank.rs  members.rs  mod.rs  transactions.rs
crates/eris-data/: Cargo.toml
crates/eris-data/src/: bank_import.rs  lib.rs  members.rs  operations.rs  transactions.rs
crates/eris-db/: Cargo.toml
crates/eris-db/db/: schema.sql
crates/eris-db/src/: bank_import.rs  connection.rs  lib.rs  members.rs  results.rs  schema.rs  state.rs  transactions.rs
crates/eris-db/src/gneld/: errors.rs  members.rs  transactions.rs
crates/eris-domain/: Cargo.toml
crates/eris-domain/src/: bank_import.rs  lib.rs  members.rs  operations.rs  state.rs  transactions.rs
crates/eris-setup/src/: main.rs
db/: schema.sql
eris-accounting/: Cargo.toml
eris-accounting/src/: datetime.rs
eris-banking/: Cargo.toml
eris-banking/src/deuba/: mod.rs
eris-banking/test/: konto_de.csv
eris-cli/: Cargo.toml
eris-cli/src/: cli.rs  main.rs
eris-cli/src/commands/: accounting.rs  members.rs  mod.rs
eris-db/: Cargo.toml
eris-db/src/: bank_import.rs  connection.rs  lib.rs  members.rs  state.rs  transactions.rs
eris-db/src/accounting/: datetime.rs
eris-db/src/db/: connection.rs  members.rs  transactions.rs
eris-setup/: Cargo.toml
src/: cli.rs  database.rs  lib.rs  main.rs  models.rs
src/db/: bank_import.rs  connection.rs  members.rs  mod.rs  results.rs  schema.rs  state.rs  transactions.rs
