[package]
name = "eris-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
chronoutil = "0.2.5"
clap = { version = "4.3.8", features = ["derive", "env"] }

eris-db = { path = "../eris-db" }

