[package]
name = "eris-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
chronoutil = "0.2.5"
inquire = "0.6.2"
clap = { version = "4.3.8", features = ["derive", "env"] }

eris-db = { path = "../eris-db" }
eris-data = { path = "../eris-data" }
eris-accounting = { path = "../eris-accounting" }
eris-banking = { path = "../eris-banking" }
