[package]
name = "eris-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0", features = ["chrono", "runtime-tokio-native-tls", "sqlite", "all-types", "sqlx-macros", "macros"] }
thiserror = "1.0.40"
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"

eris-data = { path = "../eris-data" }
