[package]
name = "eris-domain"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0", features = ["chrono", "runtime-tokio-native-tls", "sqlite", "all-types", "sqlx-macros", "macros"] }
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
async-trait = "0.1.69"
